Fix some accessibility bugs (incorrect labels, link area that is too large, and header hierarchy)

--- a/app/static/css/_nav.scss
+++ b/app/static/css/_nav.scss
@@ -14,9 +14,9 @@ h1 {
 }
 
 .nav__link {
-    color: constants.$soft-black;
+    color: constants.$dark-blue;
     text-decoration: none;
     &:visited {
-        color: constants.$soft-black;
+        color: constants.$dark-blue;
     }
 }
